# pyaccess

./: .gitignore  LICENSE  Makefile  README.md  auto_format_ruff.sh  pyproject.toml
src/: __init__.py  main.py
src/pyaccess/: __init__.py  core.py  exceptions.py  mdbtools_backend.py  models.py
src/pyaccess/backend/: __init__.py  base.py  mdbtools_backend.py  pyodbc_backend.py
src/pyaccess/geological/: __init__.py  alteration.py  collar.py  database.py  lithology.py  survey.py
tests/: conftest.py  test_access_database.py  test_error_handling.py  test_geological_database.py
