[project]
name = "pyaccess"
version = "0.1.0a4"
description = "Python library for reading MS Access databases (.accdb/.mdb files) using pyodbc"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Lyralabs", email = "developer@lyralabs.cloud"},
]
maintainers = [
    {name = "Lyralabs", email = "developer@lyralabs.cloud"},
]
keywords = ["access", "database", "ms-access", "mdb", "accdb", "pandas", "geological", "mining", "mdbtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/rizquuula/pyaccess", Repository = "https://github.com/rizquuula/pyaccess.git"}
dependencies = [
    "pandas>=2.0.0",
    "pip>=25.3",
    "pyodbc>=5.0.0; sys_platform == 'win32'",
    "typing-extensions>=4.0.0",
    "sqlalchemy>=2.0.0; sys_platform == 'win32'",
    "sqlalchemy-access>=2.0.0; sys_platform == 'win32'",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",          # ignore virtual env
    "resources",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # E,F = errors, I = isort (imports), UP = pyupgrade
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli = true
log_level = "INFO"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
